--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body{
 
 h1{
   padding: 15px;
-
+  align-content: center;
+  font: 42px;
+  color: #C4C4C4;
 }
 
 h2{
@@ -25,4 +27,53 @@ p {
 
 img{
     width: 250px;
+    border-style: solid;
+    border: 10px dashed #ffffff;
+    align-content: center;
+}
+
+div{
+    padding: 20px;
+    border-style: solid;
+    border: 3px solid #ffffff;
+    min-height: 125px;
+}
+
+div.introduction{
+    border-style: solid;
+    border-radius: 15px;
+    margin-top: 15px;
+    line-height: 2;
+}
+
+div.red{
+    background-color: #ff0000;
+    align-content: right;
+    margin-left: 50px;
+    border-style: solid;
+    border-bottom: 2px;
+    border-left: 5px;
+}
+
+div.blue{
+    background-color: #0000ff;
+    border-style: solid;
+    align-content: left;
+    margin-right: 40px;
+    border-right: 5px;
+    border-top: 2px;
+    color: #C4C4C4;
+}
+
+div.blue.h2{
+    color: #C4C4C4;
+}
+
+div.yellow {
+    background-color: #ffff00;
+    border-style: solid;
+    align-content: right;
+    margin: 50px left;
+    border-bottom: 2px;
+    border-left: 5px;
 }
